crates/telemetry-adapters/tests/snapshots/snapshots_assetto_corsa__ac_braking_zone_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_assetto_corsa.rs
expression: normalized
---
speed_ms: 41.67
steering_angle: -0.15
throttle: 0
brake: 0.95
clutch: 0
rpm: 6800
max_rpm: 0
gear: 3
num_gears: 0
lateral_g: -0.8
longitudinal_g: -1.4
vertical_g: 1.01
slip_ratio: 0.125
slip_angle_fl: 0.18
slip_angle_fr: 0.16
slip_angle_rl: 0.22
slip_angle_rr: 0.2
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 6
current_lap_time_s: 55.9
best_lap_time_s: 91.8
last_lap_time_s: 93.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  slip_ratio_fl:
    type: Float
    value: 0.12
  slip_ratio_fr:
    type: Float
    value: 0.11
  slip_ratio_rl:
    type: Float
    value: 0.14
  slip_ratio_rr:
    type: Float
    value: 0.13
sequence: 0
