crates/telemetry-adapters/tests/snapshots/snapshots_assetto_corsa__ac_normal_race_pace_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_assetto_corsa.rs
expression: normalized
---
speed_ms: 55.56
steering_angle: 0.08
throttle: 0.92
brake: 0
clutch: 0
rpm: 7200
max_rpm: 0
gear: 4
num_gears: 0
lateral_g: 0.45
longitudinal_g: 0.12
vertical_g: 1
slip_ratio: 0.00975
slip_angle_fl: 0.02
slip_angle_fr: 0.03
slip_angle_rl: 0.01
slip_angle_rr: 0.015
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 5
current_lap_time_s: 38.2
best_lap_time_s: 91.8
last_lap_time_s: 92.4
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  slip_ratio_fl:
    type: Float
    value: 0.01
  slip_ratio_fr:
    type: Float
    value: 0.012
  slip_ratio_rl:
    type: Float
    value: 0.008
  slip_ratio_rr:
    type: Float
    value: 0.009
sequence: 0
