crates/telemetry-adapters/tests/snapshots/snapshots_assetto_corsa__ac_pit_stop_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_assetto_corsa.rs
expression: normalized
---
speed_ms: 16.67
steering_angle: 0
throttle: 0.3
brake: 0
clutch: 0
rpm: 3200
max_rpm: 0
gear: 1
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 1
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: true
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: true
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 12
current_lap_time_s: 72
best_lap_time_s: 91.8
last_lap_time_s: 118.5
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  slip_ratio_fl:
    type: Float
    value: 0
  slip_ratio_fr:
    type: Float
    value: 0
  slip_ratio_rl:
    type: Float
    value: 0
  slip_ratio_rr:
    type: Float
    value: 0
sequence: 0
